--- a/Tailwind/main.css
+++ b/Tailwind/main.css
@@ -44,7 +44,7 @@ html{
 }
 
 .car_buttons{
-   @apply absolute top-[85%] left-[50%];
+   @apply absolute top-[85%] left-[50%] flex flex-col lg:flex-row;
 }
 
 .btn{
@@ -52,7 +52,7 @@ html{
 }
 
 .invetory{
-   @apply text-[#393c41] bg-white bg-opacity-60 ml-8;
+   @apply text-[#393c41] bg-white bg-opacity-60 lg:ml-8;
 }
 
 .down_svg{
