--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -558,6 +558,10 @@ video {
   margin-right: 0.8rem;
 }
 
+.hidden{
+  display: none;
+}
+
 .h-6{
   height: 1.5rem;
 }
@@ -698,6 +702,14 @@ html{
   position: absolute;
   top: 85%;
   left: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 1024px){
+  .car_buttons{
+    flex-direction: row;
+  }
 }
 
 .btn{
@@ -721,11 +733,16 @@ html{
 }
 
 .invetory{
-  margin-left: 2rem;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-bg-opacity: 0.6;
   --tw-text-opacity: 1;
   color: rgb(57 60 65 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px){
+  .invetory{
+    margin-left: 2rem;
+  }
 }
 
 .down_svg{
@@ -778,4 +795,10 @@ html{
 
 .hover\:bg-opacity-10:hover{
   --tw-bg-opacity: 0.1;
+}
+
+@media (min-width: 1024px){
+  .lg\:block{
+    display: block;
+  }
 }
